--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,24 @@
 services:
-  id_hash_db:
+  potgres_db:
     image: postgres:latest
     ports:
       - 5432:5432
     volumes:
-      - hashes:/var/lib/postgresql/data
+      - pg:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: id_hash_db
-
-  analysis_db:
-    image: postgres:latest
-    ports:
-      - 5433:5432
-    volumes:
-      - analyze:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: analysis_db
+      POSTGRES_DB: postgres
 
   file_db:
-    image: clickhouse:latest
+    image: mongo
     ports:
-      - 9000:9000
+      - 27017:27017
     volumes:
-      - files:/var/lib/clickhouse
+      - files:/var/lib/mongo
     environment:
-      CLICKHOUSE_USER: default
-      CLICKHOUSE_PASSWORD: default
-      CLICKHOUSE_DB: file_db
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
 
   file-storager-service:
     build:
@@ -39,8 +27,7 @@ services:
     ports:
       - 8082:8082
     depends_on:
-      - id_hash_db
-      - analysis_db
+      - potgres_db
       - file_db
 
   file-analyzer-service:
@@ -70,6 +57,5 @@ services:
       - core-service
 
 volumes:
-  hashes:
-  analyze:
+  pg:
   files:
